# B2B

./: .coveragerc  .gitignore  .pre-commit-config.yaml  ACCURACY_ENHANCEMENTS.md  BUGS_FOUND.md  BUG_FIXES.md  BUG_REPORT.md  BUG_SCAN_SUMMARY.md  CHANGELOG.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_OPTIMIZATION_REPORT.md  CONTINUED_IMPLEMENTATION.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIXES_2026_01_11.md  DEPLOY_NOW.md  Dockerfile  FINAL_OPTIMIZATION_REPORT.md  FINAL_OPTIMIZATION_SUMMARY.md  FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  ITERATION_10_ASSESSMENT.md  ITERATION_10_CRITIQUE.md  ITERATION_10_EXECUTION.md  ITERATION_10_PLAN.md  ITERATION_10_REEVALUATION.md  ITERATION_11_ASSESSMENT.md  ITERATION_11_CRITIQUE.md  ITERATION_11_EXECUTION.md  ITERATION_11_PLAN.md  ITERATION_11_REEVALUATION.md  ITERATION_12_ASSESSMENT.md  ITERATION_12_CRITIQUE.md  ITERATION_12_EXECUTION.md  ITERATION_12_PLAN.md  ITERATION_12_REEVALUATION.md  ITERATION_1_SUMMARY.md  ITERATION_2_SUMMARY.md  ITERATION_3_ASSESSMENT.md  ITERATION_3_CRITIQUE.md  (+38 more)
.github/workflows/: ci.yml
.streamlit/: README.md  config.toml  secrets.toml.example
analyzer/: __init__.py  data_validator.py  pattern_extractor.py  pattern_extractor_v2.py  quality_rubric.py  sentiment_analyzer.py  web_researcher.py  xai_client.py
api/: health.py  rest.py
docs/: Makefile  README.md  api.md  api_reference.rst  conf.py  developer_guide.md  index.rst  user_guide.md
legal/: COPYRIGHT.md  EULA.md  LEGAL.md  PRIVACY_POLICY.md  README.md  TERMS_OF_USE.md  TRADEMARK.md
scraper/: __init__.py  base.py  base_async.py  capterra_scraper.py  capterra_scraper_async.py  discord_scraper.py  g2_scraper.py  g2_scraper_async.py  github_scraper.py  google_news_scraper.py  hackernews_scraper.py  linkedin_scraper.py  multi_source_scraper.py  playwright_scraper.py  producthunt_scraper.py  reddit_scraper.py  trustpilot_scraper.py  twitter_scraper.py
scripts/: build_docs.sh  install_playwright.py  load_test.sh  measure_coverage.sh
tests/: __init__.py  test_analyzer.py  test_api.py  test_async_helpers.py  test_bias_detection.py  test_cache.py  test_circuit_breaker.py  test_compliance.py  test_csrf.py  test_database.py  test_database_encryption.py  test_e2e.py  test_integration.py  test_load.py  test_multi_source_scraper.py  test_performance.py  test_reddit_scraper.py  test_scrapers.py  test_secrets_manager.py  test_security.py  test_sentiment_analyzer.py
utils/: __init__.py  accessibility.py  async_helpers.py  audit.py  bias_detection.py  cache.py  circuit_breaker.py  compliance.py  csrf.py  database.py  database_encryption.py  energy_efficiency.py  health.py  logging.py  monitoring.py  performance_applications.py  performance_optimizer.py  rate_limiter.py  retry.py  secrets_manager.py  security.py  security_headers.py  security_monitor.py
